<resources>
    <string name="app_name">WeatherAlarm</string>
    <string name="add">add</string>
    <string name="more">more</string>
    <string name="delete">delete</string>
    <string name="save">저장</string>
    <string name="cancel">취소</string>
    <string name="sunday">일</string>
    <string name="monday">월</string>
    <string name="tuesday">화</string>
    <string name="wednesday">수</string>
    <string name="thursday">목</string>
    <string name="friday">금</string>
    <string name="saturday">토</string>
    <string name="title_domain">Module Title</string>
    <string name="temperature">%s℃</string>
    <string name="max_min_temperature">%s℃ / %s℃</string>
    <string name="weather">날씨</string>
    <string name="title">제목</string>
</resources>