<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="kr.ryan.weatheralarm.viewModel.AlarmEditViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_sunday"
            draw="@={viewModel.flowSelectedDays[0]}"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center"
            android:onClick="@{() -> viewModel.changeStatus(0)}"
            android:text="@string/sunday"
            android:textColor="@color/red"
            android:textSize="@dimen/day_text_size"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/tv_monday"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_monday"
            draw="@={viewModel.flowSelectedDays[1]}"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center"
            android:onClick="@{() -> viewModel.changeStatus(1)}"
            android:text="@string/monday"
            android:textColor="@color/black"
            android:textSize="@dimen/day_text_size"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1"
            app:layout_constraintLeft_toRightOf="@id/tv_sunday"
            app:layout_constraintRight_toLeftOf="@id/tv_tuesday"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_tuesday"
            draw="@={viewModel.flowSelectedDays[2]}"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center"
            android:onClick="@{() -> viewModel.changeStatus(2)}"
            android:text="@string/tuesday"
            android:textColor="@color/black"
            android:textSize="@dimen/day_text_size"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1"
            app:layout_constraintLeft_toRightOf="@id/tv_monday"
            app:layout_constraintRight_toLeftOf="@id/tv_wednesday"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_wednesday"
            draw="@={viewModel.flowSelectedDays[3]}"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center"
            android:onClick="@{() -> viewModel.changeStatus(3)}"
            android:text="@string/wednesday"
            android:textColor="@color/black"
            android:textSize="@dimen/day_text_size"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1"
            app:layout_constraintLeft_toRightOf="@id/tv_tuesday"
            app:layout_constraintRight_toLeftOf="@id/tv_thursday"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_thursday"
            draw="@={viewModel.flowSelectedDays[4]}"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center"
            android:onClick="@{() -> viewModel.changeStatus(4)}"
            android:text="@string/thursday"
            android:textColor="@color/black"
            android:textSize="@dimen/day_text_size"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1"
            app:layout_constraintLeft_toRightOf="@id/tv_wednesday"
            app:layout_constraintRight_toLeftOf="@id/tv_friday"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_friday"
            draw="@={viewModel.flowSelectedDays[5]}"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center"
            android:onClick="@{() -> viewModel.changeStatus(5)}"
            android:text="@string/friday"
            android:textColor="@color/black"
            android:textSize="@dimen/day_text_size"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1"
            app:layout_constraintLeft_toRightOf="@id/tv_thursday"
            app:layout_constraintRight_toLeftOf="@id/tv_saturday"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_saturday"
            draw="@={viewModel.flowSelectedDays[6]}"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center"
            android:onClick="@{() -> viewModel.changeStatus(6)}"
            android:text="@string/saturday"
            android:textColor="@color/blue"
            android:textSize="@dimen/day_text_size"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1"
            app:layout_constraintLeft_toRightOf="@id/tv_friday"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
